cluster/traefik/traefik-external/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: crowdsec-bouncer
  namespace: traefik-external
spec:
  plugin:
    crowdsec-bouncer-traefik-plugin:
      enabled: true

      crowdsecMode: stream
      crowdsecLapiScheme: http
      crowdsecLapiHost: "crowdsec-service.crowdsec.svc.cluster.local:8080"
      crowdsecLapiPath: "/"

      crowdsecLapiKeyFile: "/run/secrets/crowdsec/bouncer-key"

      forwardedHeadersTrustedIps:
        - "10.0.0.0/8"
        - "172.16.0.0/12"
        - "192.168.0.0/16"
      clientTrustedIPs:
        - "10.0.0.0/8"
        - "172.16.0.0/12"
        - "192.168.0.0/16"
