cluster/traefik/traefik-external/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-external-dashboard
  namespace: traefik-external
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-external-traefik-external
  ports:
    - name: traefik
      port: 8080
      targetPort: traefik  # or 8080, depending on how the port is named in the pod
      protocol: TCP
